# industrial-recommender-system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
api/: API_REFERENCE.md  inference_api.py
configs/: inference_config.yaml  ranking_config.yaml  retrieval_config.yaml
data/raw/: README.md
scripts/: build_faiss_index.py  compute_faiss_candidates.py  compute_ranking_features.py  generate_item_embeddings.py  ranking_evaluation.py  ranking_train.py  retrieval_evaluation.py  retrieval_train.py
src/data/: helpers.py  processing.py  product_preprocessing.py  ranking_dataset.py  retrieval_dataset.py  review_preprocessing.py
src/evaluation/: ranking_evaluator.py  retrieval_evaluator.py  retrieval_metrics.py
src/features/: sequence_features.py  text_features.py
src/models/: item_tower.py  loss.py  ranking.py  two_tower.py  user_tower.py
src/retrieval/: candidate_generator.py
src/training/: ranking_trainer.py  retrieval_trainer.py
src/utils/: logging.py
